--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <footer>
         <p>&copy; 2024 Doyal Saji</p>
         <div class="social-icons">
-            <a href="https://www.linkedin.com/in/doyalsaji" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/doyalsaji" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://twitter.com/doyalsaji" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/doyalsaji" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/doyalsaji" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com/doyalsaji" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
         </div>
     </footer>
 </body>
